--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Domagoj Vukosavljević",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.4",
     "express": "^4.18.2",
     "mongodb": "^5.1.0"
   }
