--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "Domagoj Vukosavljević",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.1.0"
   }
